--- a/code/LEVEL_KEAHLIAN copy 2.ipynb
+++ b/code/LEVEL_KEAHLIAN copy 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4    DSO  B3-MI  Malang Madani  Perekayasa Utama  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  Malang Madani  Perekayasa Utama  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
        "39         Malang      Pimpinan Muda  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "4  Perekayasa Utama  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "4                1066.0           11.0           7"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "4                  0.43           0.20        0.40"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
        "24                  0.05           0.00        1.00"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
        "<Axes: ylabel='DURATIONS_PERPROJECT'>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1576,7 +1576,7 @@
        "4                  0.02"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +1654,7 @@
        "32                   0.0           0.80        0.20"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,7 @@
        "<Axes: ylabel='TOTAL_PROJECT'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1731,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1792,7 @@
        "4           0.20"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
        "4                1066.0           11.0           7"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1987,7 @@
        "4                 0.025         0.2000        0.40"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1998,7 +1998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2163,7 @@
        "4  Perekayasa Utama  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2188,7 +2188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2199,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
        "4                 0.025         0.2000        0.40       1       5    6"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2340,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2518,9 +2518,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0],\n",
+       "       [0, 0, 2, 0, 0],\n",
+       "       [0, 0, 0, 2, 0],\n",
+       "       [0, 0, 1, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cm= confusion_matrix(y_test, y_pred)\n",
     "cm"
@@ -2528,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2595,7 +2610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2649,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2662,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2672,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2681,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2704,7 +2719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2721,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2746,7 +2761,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def predict_keahlian(input_data):\n",
+    "#     # Convert input data to DataFrame\n",
+    "#     input_df = pd.DataFrame([input_data], columns=X.columns)\n",
+    "    \n",
+    "#     # Handle categorical data encoding\n",
+    "#     for col, le in label_encoders.items():\n",
+    "#         input_df[col] = le.transform(input_df[col])\n",
+    "    \n",
+    "#     numerical_cols = ['DURATIONS_PERPROJECT', 'TOTAL_PROJECT', 'LAMA_KERJA']\n",
+    "#     # Handle numerical data scaling\n",
+    "#     input_df[numerical_cols] = scaler.transform(input_df[numerical_cols])\n",
+    "    \n",
+    "#     # Predict\n",
+    "#     prediction = modela.predict(input_df)\n",
+    "    \n",
+    "#     # Return the predicted LEVEL KEAHLIAN\n",
+    "#     return prediction[0]\n",
+    "\n",
+    "# # Example of how to use the predict_keahlian function\n",
+    "# new_data = {\n",
+    "#     'DURATIONS_PERPROJECT': 1.0,\n",
+    "#     'TOTAL_PROJECT': 1.0,\n",
+    "#     'STATUS': 'Tetap',\n",
+    "#     'LAMA_KERJA': 4,\n",
+    "#     'DIVISI': 'DBM',\n",
+    "#     'GOL': 'C1'\n",
+    "# }\n",
+    "\n",
+    "# predicted_keahlian = predict_keahlian(new_data)\n",
+    "# print(f\"Predicted LEVEL KEAHLIAN: {predicted_keahlian}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -2758,25 +2811,24 @@
     }
    ],
    "source": [
+    "# Fungsi untuk melakukan prediksi\n",
     "def predict_keahlian(input_data):\n",
-    "    # Convert input data to DataFrame\n",
     "    input_df = pd.DataFrame([input_data], columns=X.columns)\n",
     "    \n",
-    "    # Handle categorical data encoding\n",
+    "    # Gunakan kembali LabelEncoders yang sudah disimpan\n",
     "    for col, le in label_encoders.items():\n",
-    "        input_df[col] = le.transform(input_df[col])\n",
+    "        input_df[col] = le.transform(input_df[col])  # Gunakan transform, bukan fit_transform\n",
     "    \n",
+    "    # Handle scaling numerical data\n",
     "    numerical_cols = ['DURATIONS_PERPROJECT', 'TOTAL_PROJECT', 'LAMA_KERJA']\n",
-    "    # Handle numerical data scaling\n",
     "    input_df[numerical_cols] = scaler.transform(input_df[numerical_cols])\n",
     "    \n",
-    "    # Predict\n",
+    "    # Lakukan prediksi\n",
     "    prediction = modela.predict(input_df)\n",
     "    \n",
-    "    # Return the predicted LEVEL KEAHLIAN\n",
     "    return prediction[0]\n",
     "\n",
-    "# Example of how to use the predict_keahlian function\n",
+    "# Contoh penggunaan\n",
     "new_data = {\n",
     "    'DURATIONS_PERPROJECT': 1.0,\n",
     "    'TOTAL_PROJECT': 1.0,\n",
@@ -2787,7 +2839,7 @@
     "}\n",
     "\n",
     "predicted_keahlian = predict_keahlian(new_data)\n",
-    "print(f\"Predicted LEVEL KEAHLIAN: {predicted_keahlian}\")\n"
+    "print(f\"Predicted LEVEL KEAHLIAN: {predicted_keahlian}\")"
    ]
   },
   {
@@ -2799,7 +2851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2808,14 +2860,14 @@
     "    'TOTAL_PROJECT': 1.0,\n",
     "    'STATUS': 'Tetap',\n",
     "    'LAMA_KERJA': 4,\n",
-    "    'DIVISI': 'DBM',\n",
-    "    'GOL': 'C1'\n",
+    "    'DIVISI': 'DSO',\n",
+    "    'GOL': 'B1'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2824,7 +2876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2834,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -2885,7 +2937,7 @@
        "0                   1.0            1.0           4       0       0    0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
