--- a/code/testvers.ipynb
+++ b/code/testvers.ipynb
@@ -100,6 +100,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files in the directory: ['.git', '.gitignore', 'app.py', 'feature_order.pkl', 'final_model.pkl', 'le_status.pkl', 'LK.ipynb', 'ohe.pkl', 'prediction_history2.xlsx', 'requirements.txt', 'scaler.pkl', 'testvers.ipynb']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(\"Files in the directory:\", os.listdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "try:\n",
+    "    scaler = joblib.load('scaler.pkl')\n",
+    "except FileNotFoundError:\n",
+    "    print(\"scaler.pkl not found! Check the file path and ensure it is correctly specified.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
